# Team-Activity-Log

./: .gitignore  README.md
team-activity-log/: Dockerfile
team-activity-log/backend/: Dockerfile  pyproject.toml  railway.toml  requirements.txt
team-activity-log/backend/src/app/: main.py  models.py
team-activity-log/backend/src/app/routers/: posts.py  tags.py  users.py
team-activity-log/frontend/: index.html  package.json  vite.config.ts
team-activity-log/frontend/src/: App.tsx  main.tsx
team-activity-log/frontend/src/api/: client.ts
team-activity-log/frontend/src/components/: AvatarComponent.tsx  CommentNode.tsx  EditorToolbar.tsx  FullPostPanel.tsx  ImageAnnotator.tsx  ImageStrip.tsx  LeftPanel.tsx  PostCard.tsx  PostComposer.tsx  PreviewCard.tsx  ReplyBox.tsx  RightPanel.tsx  Tags.tsx
team-activity-log/frontend/src/interfaces/: TeamActivityLogInterfaces.tsx
team-activity-log/frontend/src/pages/: TeamActivityLog.tsx
team-activity-log/frontend/src/utilities/: TeamLogsUtilities.tsx  helpers.tsx  theme.tsx
