[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-log-backend"
version = "0.1.0"
description = "FastAPI backend for Activity Log"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Rasheed Martin" }
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "dotenv"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/yourname/portfolio-backend"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
fix = true